[package]
name = "client"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
engine = { path = '../engine' }
env_logger = "0.10.0"
log = "0.4.19"
nalgebra-glm = "0.18"
pollster = "0.3.0"
wgpu = "0.16.1"
winit = "0.28.6"

[profile.dev]
debug = 2
debug-assertions = true
overflow-checks = true

[profile.release]
debug = 1
opt-level = 3
overflow-checks = false
strip = "debuginfo"
lto = "fat"
