[package]
name = "engine"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.19"
wgpu = { version = "0.16.1", features = ["webgl"] }
winit = "0.28.6"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
image = { version = "0.24", features = ["png"] }
hashbrown = "0.14.0"
nalgebra-glm = "0.18"
smallvec = "1.10.0"
thiserror = "1.0.40"
instant = "0.1"
bitflags = "2.3.3"
rand = "0.8.5"
egui-wgpu = { version = "0.22.0", features = ["puffin", "winit"] }
egui = "0.22.0"
puffin_egui = "0.22.0"
egui-winit = { version = "0.22.0", default-features = false, features = ["smithay-clipboard", "puffin", "wayland", "links"] }
raw-window-handle = "0.5.2"
